[gd_scene load_steps=9 format=3 uid="uid://nvigse67farh"]

[ext_resource type="Texture2D" uid="uid://bhcmr5hm6ycao" path="res://brackeys_platformer_assets/sprites/knight.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bfdkw41qlu23l" path="res://player.gd" id="1_onrkg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4flbx"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hs0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 5
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_4flbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2hs0m")
autoplay = "default"
frame_progress = 0.092736654

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_again_timer" type="Timer" parent="."]

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
